# Profood

./: .env.example  .gitignore  README.md  app.py  app_original.py  auth_setup.py  check.py  config.json  fetch_uzum_catalog.py  inspect_data.py  main.py  output.txt  pyproject.toml  requirements.txt  test_db.py  vendors_dump.json  yandex_catalog.json
.github/workflows/: scrape.yml
analytics/: anomaly.py  category_mapper.py  metrics.py
browser_data/: Local State
browser_data/Default/: DIPS-wal  Favicons  Favicons-journal  History  Network Action Predictor  Preferences  Secure Preferences  Web Data
browser_data/Default/DawnGraphiteCache/: data_1  index
browser_data/Default/DawnWebGPUCache/: data_1  index
browser_data/Default/Extension Rules/: LOG
browser_data/Default/Extension Scripts/: LOG
browser_data/Default/Extension State/: LOG  LOG.old
browser_data/Default/GCM Store/: LOG  LOG.old
browser_data/Default/GPUCache/: data_0  data_1  data_2  index
browser_data/Default/JumpListIconsRecentClosed/: 6065d6f3-1558-4dc5-bb80-0438fb16c641.tmp
browser_data/Default/Network/: Cookies  (+3 more)
browser_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  index
browser_data/ShaderCache/: data_1  index
browser_data/segmentation_platform/: ukm_db
data/: export.json
database/: db.py  models.py
notifications/: bot.py  image_generator.py
scraper/: api_client.py  express24_scraper.py  geo_rotator.py  uzum_catalog_builder.py  uzum_scraper.py  yandex_scraper.py
(+2027 files in other folders)
